--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   responsive_sizer: ^3.3.1
   http: ^1.2.0
   get: ^4.6.6
+  email_validator: ^2.1.17
+  image_picker: ^1.0.8
+  intl: ^0.19.0
+  image_picker_web: 2.0.1
 
 dev_dependencies:
   flutter_test:
