--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^1.0.8
   intl: ^0.19.0
   image_picker_web: 2.0.1
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
